<resources>

    <string name="app_name">Trainning</string>
    
    <string name="title_activity_contato">Contact</string>
    
    <string name="view_title_consultar_contato">Search Contacts</string>
    <string name="view_title_incluir_contato">Add Contact</string>
    <string name="view_title_editar_contato">Edit Contact</string>
    <string name="view_title_listar_contato">List Contact</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_novo">New</string>
    <string name="img_description_icone">Icon</string>
    <string name="btn_exemplo">Sample</string>
    <string name="hint_txt_valor">Enter value</string>
    <string name="toast_voce_digitou">You have entered: %s</string>
    <string name="toast_click_posicao">You have clicked at position %s.</string>
    <string name="toast_click_nome">You have clicked at %s.</string>
    
    <string name="hint_txt_nome">Name</string>
    <string name="hint_txt_endereco">Address</string>
    <string name="hint_txt_site">Site</string>
    <string name="hint_txt_telefone">Phone</string>
    <string name="btn_salvar">Save</string>
    <string name="campo_obrigatorio">Required.</string>
    <string name="valor_invalido">Invalid value.</string>
    <string name="action_editar">Edit</string>
    <string name="action_excluir">Delete</string>
    <string name="confirm_sim">Yes</string>
    <string name="confirm_nao">No</string>
    <string name="confirm_msg_delete">Confirms the exclusion?</string>
    <string name="confirm_title">Confirm</string>    
    
    <string name="btn_pesquisar">Search</string>    
    
    <string name="toast_contato_empty">No contact found.</string>
    <string name="action_ligar">Call&#8230;</string>
    <string name="action_sms">Send SMS&#8230;</string>
    <string name="action_site">Go to site&#8230;</string>
    <string name="sms_prefix">Dear %s,</string>
    <string name="img_foto_desc">Contact Photo</string>

</resources>
