<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.cast.treinamento.app.ContatoActivity" >

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/img_foto_desc"
        android:src="@android:drawable/gallery_thumb" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_txt_nome"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_txt_endereco"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/txtSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_txt_site"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_txt_telefone"
        android:inputType="phone" />

    <RatingBar
        android:id="@+id/barAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar" />

</LinearLayout>