<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.cast.treinamento.app.ConsultaContatosActivity" >

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_txt_nome" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/hint_txt_telefone" />

    <Button
        android:id="@+id/btnPesquisar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pesquisar" />

</LinearLayout>
